# fc-notimo

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  build.gradle  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.override.yml  docker-compose.yml  init_dirs.bat  init_dirs.sh  package-lock.json  pyproject.toml  settings.gradle  start-backend.ps1  start-backend.sh  start-redis.ps1  start-redis.sh  start-tunnel.bat  start-tunnel.ps1  start-tunnel.sh
.github/workflows/: ci-cd.yml  deploy-dev.yml
backend-ai/: Dockerfile  pyproject.toml  requirements.txt
backend-ai/app/: download_models.py  main.py  test.py
backend-ai/app/config/: config.py
backend-ai/app/core/: actual_model_loader.py  agent_initializer.py  dummy_model_loader_for_local.py  model_loader.py
backend-ai/app/routers/: template_router.py  validate_router.py
backend-ai/app/schemas/: template.py  validate.py
backend-ai/app/services/: cls_service.py  gen_service.py  guidelines_service.py  tools.py
backend-spring/: Dockerfile  EMAIL_TEST_GUIDE.md  RDB_TEST_GUIDE.md
backend-spring/src/test/: README.md
frontend/: .env  .env.dev  .env.development  .env.prod  .env.production  Dockerfile  README_API_환경설정.md  nginx-dev.conf  nginx-prod.conf  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js  router.js
frontend/src/pages/: ContactEditPage.js  ContactManagementPage.js  CreateWorkspace.js  FavoriteTemplatesPage.js  FindPassword.js  Login.js  MyTemplatePage.js  PublicTemplatePage.js  (+7 more)
(+261 files in other folders)
